@@ -17,7 +17,7 @@ version_longtype="development"
 # A timestamp, to be used by bumpversion and other scripts.
 # It can be used, for example, to 'touch' this file on every build, thus
 # forcing revision control systems to add it on every checkin automatically.
-version_stamp="Fri Dec  2 01:27:39 MST 2005"
+version_stamp="Sun Dec  4 17:11:21 MST 2005"
 
 # The version number information
 version_micro=712
